Finish uploading file

--- a/client/src/components/UploadForm/OptionsForm/OptionsForm.css
+++ b/client/src/components/UploadForm/OptionsForm/OptionsForm.css
@@ -45,7 +45,7 @@
     border: 0;
     padding: 0.5em 1em;
     cursor: pointer;
-    background: #ffbf00;
+    background: #ffc400;
     text-transform: uppercase;
     color: rgb(49, 46, 46);
     border-radius: 5px;
