--- a/client/src/components/UploadForm/OptionsForm/OptionsForm.css
+++ b/client/src/components/UploadForm/OptionsForm/OptionsForm.css
@@ -19,10 +19,26 @@
     flex: 1 1 50%;
 }
 
+.OptionsForm__RefreshButton {
+    border: 0;
+    right: 1rem;
+    top: 0.5rem;
+    display: flex;
+    align-items: center;
+    position: absolute;
+    font-size: 0.85em;
+    cursor: pointer;
+}
+
+.OptionsForm__RefreshButton img {
+    margin-right: 0.4em;
+}
+
 .OptionsForm>form {
     margin-left: 0.5rem;
     margin-top: 0.5rem;
     flex-grow: 1;
+    position: relative;
 }
 
 .OptionsForm__Type {
@@ -55,4 +71,19 @@
     font-size: 1em;
     font-weight: bold;
     outline: none;
+    position: relative;
+}
+
+.OptionsForm__SubmitButton a {
+    width: 100%;
+    height: 100%;
+    display: inline-block;
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+
+.OptionsForm__SubmitButton--DownloadButton {
+    background: #1a237e !important;
+    color: white !important;
 }
