--- a/client/src/components/Snackbar/Snackbar.css
+++ b/client/src/components/Snackbar/Snackbar.css
@@ -1,14 +1,21 @@
 .Snackbar {
     position: fixed;
-    background: #43a047;
     color: #fff;
     box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2),
     0px 6px 10px 0px rgba(0, 0, 0, 0.14),
     0px 1px 18px 0px rgba(0, 0, 0, 0.12);
     font-size: 16px;
-    padding: 0.75em 1em;
-    border-radius: 3px;
-    transition: all 0.5s ease;
+    padding: 0.75em 1.25em;
+    border-radius: 2px;
+    transition: all 0.5s linear;
+}
+
+.Snackbar--Success {
+    background:#388e3c;
+}
+
+.Snackbar--Warning {
+    background: #dd2c00;
 }
 
 .Snackbar--Open {
@@ -27,11 +34,20 @@
     align-items: center;
 }
 
-.Snackbar__Content svg {
+.Snackbar--Success svg {
     width: 1em;
     height: 1em;
     fill: #fff;
-    color: #43a047;
+    color: #388e3c;
     font-size: 20px;
-    margin-right: 5px;
+    margin-right: 0.5em;
+}
+
+.Snackbar--Warning svg {
+    width: 1em;
+    height: 1em;
+    fill: #fff;
+    color: #dd2c00;
+    font-size: 20px;
+    margin-right: 0.5em;
 }
