--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -12,6 +12,10 @@
     margin-right: 1em;
 }
 
+.Header__left__logo a {
+    color: #463e3e;
+}
+
 .Header__left {
     display: flex;
 }
@@ -30,6 +34,7 @@
     padding-right: 2em;
     outline: none;
     font-size: 1em;
+    color: #463e3e;
 }
 
 .Header__right__signup {
@@ -50,3 +55,11 @@
     margin-right: 10px;
 }
 
+.Header__NavLink--active {
+    font-weight: bold;
+    color: black;
+}
+
+.Header__NavLink {
+    color: #463e3e;
+}
