--- a/client/src/components/Snackbar/Snackbar.css
+++ b/client/src/components/Snackbar/Snackbar.css
@@ -4,11 +4,10 @@
     box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2),
     0px 6px 10px 0px rgba(0, 0, 0, 0.14),
     0px 1px 18px 0px rgba(0, 0, 0, 0.12);
-    font-size: 16px;
-    padding: 0.75em 1.25em;
+    padding: 0.75rem 1.25rem;
     border-radius: 2px;
     left: 15px;
-    transition: all 0.5s linear;
+    transition: all 0.25s linear;
 }
 
 .Snackbar--Success {
@@ -31,9 +30,9 @@
     border-radius: 50%;
     display: flex;
     align-items: center;
-    font-family: 'Roboto';
+    font-family: 'Source Sans Pro';
     font-weight: 400;
-    font-size: 0.875rem;
+    font-size: 0.9rem;
 }
 
 .Snackbar--Success svg {
