--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -63,3 +63,16 @@
 .Header__NavLink {
     color: #463e3e;
 }
+
+.KeyGenNav {
+    position: relative;
+    margin-left: 1em;
+}
+
+.KeyGenNav::before {
+    position: absolute;
+    content: "|";
+    left: -1.25em;
+    top: 0;
+    font-weight: normal;
+}
