--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -24,6 +24,7 @@
     list-style-type: none;
     display: flex;
     align-items: center;
+    margin-bottom: 0;
 }
 
 .Header__right__login {
@@ -64,15 +65,17 @@
     color: #463e3e;
 }
 
-.KeyGenNav {
+.KeygenNav {
     position: relative;
+    align-items: center;
     margin-left: 1em;
 }
 
-.KeyGenNav::before {
+.KeygenNav::before {
     position: absolute;
     content: "|";
     left: -1.25em;
-    top: 0;
+    top: -10;
     font-weight: normal;
+    margin-bottom: 0;
 }
