--- a/client/src/index.css
+++ b/client/src/index.css
@@ -22,8 +22,8 @@ code {
 }
 
 a {
-  text-decoration: none;
-  color: black;
+  text-decoration: none !important;
+  color: black !important;
 }
 
 button,
